--- a/group-chat.html
+++ b/group-chat.html
@@ -654,16 +654,16 @@
         <div class="sheet-handle"></div>
         <div class="sheet-title">Group Settings</div>
 
-        <div class="sheet-option" id="editGroupRow" onclick="editGroupInfo()"><span class="opt-icon">✏️</span>Edit Group Info</div>
-        <div class="sheet-option" id="changeAvatarRow" onclick="changeGroupAvatar()"><span class="opt-icon">🖼️</span>Change Avatar</div>
+        <div class="sheet-option" onclick="editGroupInfo()"><span class="opt-icon">✏️</span>Edit Group Info</div>
+        <div class="sheet-option" onclick="changeGroupAvatar()"><span class="opt-icon">🖼️</span>Change Avatar</div>
 
         <div class="sheet-divider"></div>
 
-        <div class="settings-row" id="readModeRow" onclick="toggleReadMode()">
+        <div class="settings-row" onclick="toggleReadMode()">
             <div class="settings-left"><span class="s-icon">📢</span>Announcement Mode</div>
             <div class="toggle" id="readModeToggle"></div>
         </div>
-        <div class="settings-row" id="privateRow" onclick="togglePrivate()">
+        <div class="settings-row" onclick="togglePrivate()">
             <div class="settings-left"><span class="s-icon">🔒</span>Private Group</div>
             <div class="toggle" id="privateToggle"></div>
         </div>
@@ -676,18 +676,10 @@
 
         <div class="sheet-option" onclick="showToast('🔗 Invite link copied!');closeSettings()"><span class="opt-icon">🔗</span>Copy Invite Link</div>
         <div class="sheet-option" onclick="switchTab('members');closeSettings()"><span class="opt-icon">👥</span>Manage Members</div>
-        <div class="sheet-option" id="addMemberRow" onclick="openAddMember()"><span class="opt-icon">➕</span>Add Member</div>
-        <div class="sheet-option" id="assignRoleRow" onclick="openAssignRole()"><span class="opt-icon">🛡️</span>Assign Group Moderator</div>
-        <div class="sheet-option" id="clearChatRow" onclick="clearChat()"><span class="opt-icon">🗑️</span>Clear Chat</div>
-
-        <div class="sheet-divider"></div>
-
-        <!-- ✅ Delete Group — group admin only -->
-        <div class="sheet-option danger" id="deleteGroupRow" onclick="deleteGroup()"><span class="opt-icon">💣</span>Delete Group</div>
-        <!-- ✅ Disband Group — app staff only -->
-        <div class="sheet-option danger" id="disbandRow" onclick="disbandGroup()"><span class="opt-icon">🔥</span>Disband Group</div>
+        <div class="sheet-option" onclick="clearChat()"><span class="opt-icon">🗑️</span>Clear Chat</div>
 
         <div class="sheet-divider" id="leaveGroupDivider"></div>
+        <!-- Leave group — hidden in official group -->
         <div class="sheet-option danger" id="leaveGroupBtn" onclick="leaveGroup()"><span class="opt-icon">🚪</span>Leave Group</div>
     </div>
 </div>
@@ -708,14 +700,14 @@
 <!-- ══ ASSIGN / REMOVE ROLE MODAL ══ -->
 <div class="overlay center" id="assignRoleOverlay" onclick="closeAssignRole(event)">
     <div class="modal-box" onclick="event.stopPropagation()">
-        <div class="modal-title">Assign Group Moderator</div>
+        <div class="modal-title">Assign Role</div>
         <input class="modal-input" id="roleTargetName" type="text" placeholder="Enter member name...">
         <div style="margin-bottom:4px;">
             <div class="role-option selected-mod" id="roleOpt-mod" onclick="selectRoleOpt('mod')">
-                <div class="role-option-icon" style="background:rgba(167,139,250,0.1);">🔰</div>
+                <div class="role-option-icon" style="background:rgba(167,139,250,0.1);">🛡️</div>
                 <div class="role-option-info">
-                    <div class="role-option-name" style="color:var(--mod-color);">Group Moderator</div>
-                    <div class="role-option-desc">Can pin, delete messages, mute members, add members (private group)</div>
+                    <div class="role-option-name" style="color:var(--mod-color);">Moderator</div>
+                    <div class="role-option-desc">App-wide powers · Can disband any group · Temp ban users · Override group admins</div>
                 </div>
             </div>
             <div class="role-option" id="roleOpt-member" onclick="selectRoleOpt('member')">
@@ -808,11 +800,11 @@
 
         <div id="adminActionsSection">
             <div class="member-opt-section">Admin Actions</div>
-            <div class="sheet-option" id="optMakeAdmin" onclick="memberAction('makeAdmin')"><span class="opt-icon">⚙️</span>Make App Admin</div>
-            <div class="sheet-option" id="optRemoveAdmin" style="display:none;" onclick="memberAction('removeAdmin')"><span class="opt-icon">⬇️</span>Remove App Admin</div>
-            <div class="sheet-option" id="optAssignMod" onclick="memberAction('assignMod')"><span class="opt-icon">🔰</span>Make Group Mod</div>
-            <div class="sheet-option" id="optRemoveMod" style="display:none;" onclick="memberAction('removeMod')"><span class="opt-icon">⬇️</span>Remove Group Mod</div>
-            <div class="sheet-option" id="optMuteToggle" onclick="memberAction('mute')"><span class="opt-icon">🔇</span>Mute Member</div>
+            <div class="sheet-option" id="optMakeAdmin" onclick="memberAction('makeAdmin')"><span class="opt-icon">⚙️</span>Make Admin</div>
+            <div class="sheet-option" id="optRemoveAdmin" style="display:none;" onclick="memberAction('removeAdmin')"><span class="opt-icon">⬇️</span>Remove Admin</div>
+            <div class="sheet-option" id="optAssignMod" onclick="memberAction('assignMod')"><span class="opt-icon">🛡️</span>Make Moderator</div>
+            <div class="sheet-option" id="optRemoveMod" style="display:none;" onclick="memberAction('removeMod')"><span class="opt-icon">⬇️</span>Remove Moderator</div>
+            <div class="sheet-option" onclick="memberAction('mute')"><span class="opt-icon">🔇</span>Mute Member</div>
         </div>
 
         <div id="modActionsSection">
@@ -869,38 +861,6 @@
         <div class="sheet-option" onclick="attachAction('camera')"><span class="opt-icon">📷</span>Take Photo</div>
         <div class="sheet-option" onclick="attachAction('video')"><span class="opt-icon">🎬</span>Video</div>
         <div class="sheet-option" onclick="attachAction('sticker')"><span class="opt-icon">🎭</span>Sticker</div>
-    </div>
-</div>
-
-<!-- ══ ✅ MUTE MODAL ══ -->
-<div class="overlay center" id="muteOverlay" onclick="closeMuteModal(event)">
-    <div class="modal-box" onclick="event.stopPropagation()">
-        <div class="modal-title">Mute Member</div>
-        <p style="font-size:13px;color:#555;margin-bottom:14px;">Select mute duration for <strong id="muteTargetName" style="color:white;">this user</strong></p>
-        <div class="ban-duration-row">
-            <div class="ban-dur-btn mute-dur-btn selected" onclick="selectMuteDur(this,'30m')">30 Min</div>
-            <div class="ban-dur-btn mute-dur-btn" onclick="selectMuteDur(this,'1h')">1 Hour</div>
-            <div class="ban-dur-btn mute-dur-btn" onclick="selectMuteDur(this,'6h')">6 Hours</div>
-            <div class="ban-dur-btn mute-dur-btn" onclick="selectMuteDur(this,'1d')">1 Day</div>
-            <div class="ban-dur-btn mute-dur-btn" onclick="selectMuteDur(this,'7d')">7 Days</div>
-        </div>
-        <div class="modal-actions">
-            <button class="btn-cancel" onclick="closeMuteModal()">Cancel</button>
-            <button class="btn-confirm" onclick="confirmMute()">Mute 🔇</button>
-        </div>
-    </div>
-</div>
-
-<!-- ══ ✅ ADD MEMBER MODAL ══ -->
-<div class="overlay center" id="addMemberOverlay" onclick="closeAddMember(event)">
-    <div class="modal-box" onclick="event.stopPropagation()">
-        <div class="modal-title">Add Member</div>
-        <p style="font-size:13px;color:#555;margin-bottom:14px;">Enter the username of the person you want to add.</p>
-        <input class="modal-input" id="addMemberName" type="text" placeholder="Enter username...">
-        <div class="modal-actions">
-            <button class="btn-cancel" onclick="closeAddMember()">Cancel</button>
-            <button class="btn-confirm" onclick="confirmAddMember()">Add ✓</button>
-        </div>
     </div>
 </div>
 
